--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,11 @@
-[package]
-name = "powersoftau"
-version = "0.2.0"
-authors = ["Sean Bowe", "Alex Vlasov"]
-license = "MIT/Apache-2.0"
-edition = "2018"
+[workspace]
+members = [
+    "powersoftau-core",
+    "powersoftau-cli",
+]
+resolver = "2"
 
-description = "Communal zk-SNARK MPC for Public Parameters"
-documentation = "https://docs.rs/powersoftau/"
-homepage = "https://github.com/matter-labs/powersoftau"
-repository = "https://github.com/matter-labs/powersoftau"
-
-[dependencies]
+[workspace.dependencies]
 bellman = { git = 'https://github.com/matterinc/bellman', tag = "0.2.0" }
 blake2 = "0.10"
 byteorder = "1.5"
@@ -23,6 +18,3 @@ num_cpus = "1.17"
 rand = "0.4"
 rust-crypto = "0.2"
 typenum = "1.18"
-
-[features]
-
