Create TUI application

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,21 +2,27 @@
 members = [
     "powersoftau-core",
     "powersoftau-cli",
+    "powersoftau-tui",
 ]
 resolver = "2"
 
 [workspace.dependencies]
+anyhow = "1.0"
 bellman = { git = 'https://github.com/matterinc/bellman', tag = "0.2.0" }
 blake2 = "0.10"
 byteorder = "1.5"
+chrono = { version = "0.4", features = ["serde"] }
 config = "0.13"
 crossbeam = "0.4"
+crossterm = "0.27"
 generic-array = "0.14.7"
 hex-literal = "1.0"
 itertools = "0.14"
 memmap = "0.7.0"
 num_cpus = "1.17"
 rand = "0.4"
+ratatui = "0.26"
 rust-crypto = "0.2"
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1.0", features = ["full"] }
 typenum = "1.18"
